<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/print"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/print"/>

    <item
        android:id="@+id/handwriting"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/handwriting"/>

    <item
        android:id="@+id/license"
        android:orderInCategory="900"
        android:showAsAction="never"
        android:title="@string/license"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="999"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>